--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -13,6 +13,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Download RR xml
+      run: |-
+        curl -o rr.xml  https://rr.sapo.pt/rss/rssfeed.aspx?section=section_noticias
     - name: Download Público Feed
       run: |-
         curl "https://www.publico.pt/api/search/?size=20?$(date +%s)" | jq '.[:20] | map(.title = .titulo | .date_published = .data | del(.titulo, .data)) | map({title, url, date_published, media: "Público", mediaLogo: "/assets/img/publico.png"})' | jq -r tostring > digest/latest--publico.json
