--- a/.github/workflows/latest-news-pt.yml
+++ b/.github/workflows/latest-news-pt.yml
@@ -61,9 +61,9 @@ jobs:
     #- name: Download Eco Feed
     #  run: |-
     #    curl "https://eco.sapo.pt/wp-json/eco/v1/items" | jq '.[:20] | map(.date_published = .pubDate | del(.pubDate)) | map({title, links, date_published, media: "Eco", mediaLogo: "/assets/img/eco.png"})' | jq -r tostring > digest/latest--eco.json
-    #- name: Download CNN Portugal Feed
-    #  run: |-
-    #    curl "https://www.toptal.com/developers/feed2json/convert?url=https%3A%2F%2Fcnnportugal.iol.pt%2Frss.xml%3Fv%3D$(date +%s)&minify=on" | jq '.items[:20] | map({title, url, date_published, media: "CNN Portugal", mediaLogo: "/assets/img/cnn-portugal.png"})' | jq -r tostring > digest/latest--cnnportugal.json
+    - name: Download CNN Portugal Feed
+      run: |-
+        curl "https://www.toptal.com/developers/feed2json/convert?url=https://raw.githubusercontent.com/alexmsantos/data/main/cnnportugal.xml?v=$(date +%s)" | jq '.items[:20] | map({title, url, date_published, media: "CNN Portugal", mediaLogo: "/assets/img/cnn-portugal.png"})' | jq -r tostring > digest/latest--cnnportugal.json
     - name: Find and Replace Links
       uses: jacobtomlinson/gha-find-replace@v3
       with:
